--- a/index.html
+++ b/index.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Dicee</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/master.css">
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet"> 
 
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>Dicee</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/master.css">
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
 
+</head>
+
+<body>
+
+  
+    <h1>Refresh Me</h1>
     <div class="container">
-      <h1>Refresh Me</h1>
+    <div class="row">
+      <div class="dice col-lg-6 col-md-6">
+        <p class="player1"><br>Player 1</p>
 
-      <div class="dice">
-        <p class="player1">Player 1</p>
-        
         <img id="img1" src="images/dice6.png">
       </div>
 
-      <div class="dice">
-        <p class="player2">Player 2</p>
+      <div class="dice col-lg-6 col-md-6">
+        <p class="player2"><br>Player 2</p>
         <img id="img2" src="images/dice6.png">
       </div>
-
     </div>
-    <script src="js/index.js" charset="utf-8"></script>
-  </body>
 
-  <footer>
-    Recreated by: <strong>Natanael Kristian </strong>(naatanaelk 🎲 github 🎲 io/mysite)<br>
-    Credit to: <strong>Angela Yu</strong>  (www 🎲 App Brewery 🎲 com)
-  </footer>
+  </div>
+  <script src="js/index.js" charset="utf-8"></script>
+</body>
+
+<footer>
+  Recreated by: <strong>Natanael Kristian </strong>(naatanaelk 🎲 github 🎲 io/mysite)<br>
+  Credit to: <strong>Angela Yu</strong> (www 🎲 App Brewery 🎲 com)
+</footer>
+
 </html>
